<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp">

		<ImageView
			android:id="@+id/icon_cost_of_service"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:importantForAccessibility="no"
			app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/cost_of_service"
			app:srcCompat="@drawable/ic_store" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/cost_of_service"
			android:layout_width="160dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:hint="@string/cost_of_service"
			app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/cost_of_service_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberDecimal" />
		</com.google.android.material.textfield.TextInputLayout>

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/icon_service_question"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:importantForAccessibility="no"
			app:layout_constraintBottom_toBottomOf="@id/service_question"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/service_question"
			app:srcCompat="@drawable/ic_service" />

		<TextView
			android:id="@+id/service_question"
			style="@style/Widget.TipTime.TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/how_was_the_service"
			app:layout_constraintStart_toStartOf="@id/cost_of_service"
			app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

		<RadioGroup
			android:id="@+id/tip_options"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checkedButton="@id/option_twenty_percent"
			android:orientation="vertical"
			app:layout_constraintStart_toStartOf="@id/service_question"
			app:layout_constraintTop_toBottomOf="@id/service_question">

			<RadioButton
				android:id="@+id/option_twenty_percent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/amazing_service" />

			<RadioButton
				android:id="@+id/option_eighteen_percent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/good_service" />

			<RadioButton
				android:id="@+id/option_fifteen_percent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ok_service" />

		</RadioGroup>

		<ImageView
			android:id="@+id/icon_round_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:importantForAccessibility="no"
			app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/round_up_switch"
			app:srcCompat="@drawable/ic_round_up" />

		<com.google.android.material.switchmaterial.SwitchMaterial
			android:id="@+id/round_up_switch"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:checked="true"
			android:text="@string/round_up_tip"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/icon_round_up"
			app:layout_constraintTop_toBottomOf="@id/tip_options" />

		<Button
			android:id="@+id/calculate_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/calculate"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@id/round_up_switch"
			app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

		<TextView
			android:id="@+id/tip_result"
			style="@style/Widget.TipTime.TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/calculate_button"
			tools:text="@string/tip_amount" />

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tip_result">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_gravity="center_horizontal"
				android:gravity="center_vertical"
				android:text="@string/primary_color"
				android:textAllCaps="true"
				android:textSize="12sp" />

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/button" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="8dp"
				android:gravity="center_vertical"
				android:text="@string/secondary_color"
				android:textAllCaps="true"
				android:textSize="12sp" />

			<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/email_icon"
				app:srcCompat="@android:drawable/ic_dialog_email" />

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>